<?xml version="1.0"?>
<package format="3">
  <name>io_controller_msgs</name>
  <version>0.0.0</version>
  <description>This packages provides ros service message definitions for I/O control</description>

  <maintainer email="steven.dale@swri.org">Stevie Dale</maintainer>

  <license>Apache 2.0</license>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>